--- a/views/home.html
+++ b/views/home.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
+    <link rel="stylesheet" href="">
 </head>
+<!--Coment-->
 <body>
     <header>
+        <h2>Algo</h2>
         <div>
             <img width="100%" src="images/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
         </div>
