--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,19 @@
+*{ 
+    box-sizing: border-box;
+}
+
 body{
     margin: 0;
-    background-color: #EAC926;
+    
     font-family: 'Roboto', sans-serif;
 }
 
 a{
     color: rgb(0, 0, 0);
     text-decoration: none;
+}
+header{
+    background-color: #EAC926;
 }
 
 .btn-buscar {
@@ -47,14 +54,24 @@ input{
     color: #666;
 }
 
+.navbar-menup{
+    display: none;
+}
+
 .burger-menu{
     text-align: center;
-    margin-left: 45%;
+    /* margin-left: 45%;
     margin-right: 45%;
     margin-top: 10%;
-    margin-bottom: 10%;
+    margin-bottom: 10%; */
+    width: 10vw;
+    height: 5vh;
+    margin: auto;
+    padding: 5px;
+    margin-bottom: 5px;
     border-radius: 5px;
     background-color: #1259c3;
+    color: white;
 }
 
 .titulo-compra p{
@@ -63,7 +80,49 @@ input{
 
 }
 
+.main-banner img{
+    width: 100%;
+}
+
 .navbar-menup{
     margin-left: 15px;
 }
 
+.main{
+    background-color: rgb(202, 199, 199);
+}
+
+main{
+    width: 90%;
+    margin: auto;
+    
+}
+
+.circle-env{
+    height: 50px;
+    width: 50px;
+    border: 1px solid green;
+    border-radius: 50%;
+    color: green;
+    /* display: inline-block; */
+}
+
+article{
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100) ;
+}
+
+article div{
+    border-top: 1px solid #ebebeb;
+    padding: 15px;
+}
+
+@media (min-width: 768px) {
+    .burger-menu{
+        display: none;
+    }
+
+    .navbar-menup{
+        display: block;
+    }
+}
