--- a/views/home.html
+++ b/views/home.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        
+    <header>        
         <div>
             <img src="images/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
         </div>
@@ -41,72 +40,114 @@
                 </ul>
             </nav>
         </div>
-        <div>
+        
         <div class="burger-menu">
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars white"></i>
         </div>
-        </div>
+        
     </header>
-    <main>
-        <div>
-            <img src="/images/img-home-banner.jpg" alt="Imagenes Banner">
-        </div>
-        <section>
-            <h2>Basado en tu última visita</h2>
-            <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
-                <p class="precios">$6.770</p>
-                <p>40% OFF</p>
-                <strong><p>Cafetera Moulinex</p></strong>
-            </article>
-            <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="Mac Pro">
-                <p class="precios">$230.000</p>
-                <p>20% OFF</p>
-                <strong><p>MacBook Pro 2019</p></strong>
-            </article>
-            <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="Celular">
-                <p class="precios">$70.500</p>
-                <p>10% OFF</p>
-                <strong><p>Samsung Galaxy S10</p></strong>
-            </article>
-            <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="TV Samsung">
-                <p class="precios">$23.200</p>
-                <p>5% OFF</p>
-                <strong><p>SmartTv Samsung 43"</p></strong>
-            </article>
-        </section>
-        <section>
-            <h2>Ofertas</h2>
-            <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
-                <p class="precios">$6.770</p>
-                <p>40% OFF</p>
-                <strong><p>Cafetera Moulinex</p></strong>
-            </article>
-            <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="Mac Pro">
-                <p class="precios">$230.000</p>
-                <p>20% OFF</p>
-                <strong><p>MacBook Pro 2019</p></strong>
-            </article>
-            <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="Celular">
-                <p class="precios">$70.500</p>
-                <p>10% OFF</p>
-                <strong><p>Samsung Galaxy S10</p></strong>
-            </article>
-            <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="TV Samsung">
-                <p class="precios">$23.200</p>
-                <p>5% OFF</p>
-                <strong><p>SmartTv Samsung 43"</p></strong>
-            </article>
-        </section>
+    <div class="main-banner">
+        <img src="/images/img-home-banner.jpg" alt="Imagenes Banner">
+    </div>
+    <div class="main">
+        <main>            
+            <section>
+                <h2>Basado en tu última visita</h2>
+                <article>
+                    <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
+                    <div>
+                        <div class="circle-env">
+                            <i class="fas fa-truck"></i>
+                        </div>                        
+                        <p class="precios">$6.770</p>
+                        <p>40% OFF</p>
+                        <strong><p>Cafetera Moulinex</p></strong>
+                    </div>
+                </article>
+                <article>
+                    <img src="/images/img-macbook-pro-2019.jpg" alt="Mac Pro">
+                    <div>
+                        <div class="circle-env">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <p class="precios">$230.000</p>
+                        <p>20% OFF</p>
+                        <strong><p>MacBook Pro 2019</p></strong>
+                    </div>                
+                </article>
+                <article>
+                    <img src="/images/img-samsung-galaxy-s10.jpg" alt="Celular">
+                    <div>
+                        <div class="circle-env">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <p class="precios">$70.500</p>
+                        <p>10% OFF</p>
+                        <strong><p>Samsung Galaxy S10</p></strong>
+                    </div>
+                </article>
+                <article>
+                    <img src="/images/img-tv-samsung-smart.jpg" alt="TV Samsung">
+                    <div>
+                        <div class="circle-env">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <p class="precios">$23.200</p>
+                        <p>5% OFF</p>
+                        <strong><p>SmartTv Samsung 43"</p></strong>
+                    </div>                
+                </article>
+            </section>
+            <section>
+                <h2>Ofertas</h2>
+                <article>
+                    <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
+                    <div>
+                        <div class="circle-env">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <p class="precios">$6.770</p>
+                        <p>40% OFF</p>
+                        <strong><p>Cafetera Moulinex</p></strong>
+                    </div>
+                </article>
+                <article>
+                    <img src="/images/img-macbook-pro-2019.jpg" alt="Mac Pro">
+                    <div>
+                        <div class="circle-env">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <p class="precios">$230.000</p>
+                        <p>20% OFF</p>
+                        <strong><p>MacBook Pro 2019</p></strong>
+                    </div>
+                </article>
+                <article>
+                    <img src="/images/img-samsung-galaxy-s10.jpg" alt="Celular">
+                    <div>
+                        <div class="circle-env">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <p class="precios">$70.500</p>
+                        <p>10% OFF</p>
+                        <strong><p>Samsung Galaxy S10</p></strong>
+                    </div>
+                </article>
+                <article>
+                    <img src="/images/img-tv-samsung-smart.jpg" alt="TV Samsung">
+                    <div>
+                        <div class="circle-env">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <p class="precios">$23.200</p>
+                        <p>5% OFF</p>
+                        <strong><p>SmartTv Samsung 43"</p></strong>
+                    </div>                
+                </article>
+            </section>
 
-    </main>
+        </main>
+    </div>
     <footer>
         <section>
             <h4>Pagá con tarjeta o en efectivo</h4>
