--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,33 +1,105 @@
-*{ 
+*{
     box-sizing: border-box;
 }
 
 body{
-    margin: 0;
-    
     font-family: 'Roboto', sans-serif;
 }
 
-a{
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-}
-header{
+.main-header{
     background-color: #EAC926;
+    padding: 20px;
 }
 
-.btn-buscar {
-    /* margin-top: 3px;
-    margin-left: 15px; */
-    margin: 3px 0px 0px 15px;   
+.hamburger-button{
+    background-color: #1259c3;
+    color: white;
+    display: block;
+    max-width: 50px;
+    padding: 15px 0;
+    border-radius: 8px;
+    text-align: center;
+    font-size: 18px;
+    margin: auto;
 }
 
-p {
-    font-size: 12px;
-    line-height: 20px;
+
+.logo{
+    width: 200px;
 }
 
-h2 {
+.copy-header{
+    font-weight: 400;
+    text-align: center;
+}
+
+
+.main-nav-bar{
+    display: none;
+}
+
+.main-nav-bar ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.main-nav-bar a{
+    text-decoration: none;
+    color: #222222;
+    display: inline-block;
+    padding: 5px 0;
+    font-size: 17px;
+}
+
+section img{
+    width: 100%;
+}
+
+.main article, body{
+    background-color: rgb(202, 199, 199);
+}
+@media (min-width: 768px) {
+    .main-header-top-bar{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .copy-header{
+        max-width: 300px;
+        text-align: right;
+    }
+
+    .hamburger-button{
+        display: none;
+    }
+
+    .main-nav-bar{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .main-nav-bar ul{
+        display: flex;
+    }
+
+    .main-nav-bar li{
+        margin: 0 5px;
+    }
+}
+
+.main-banner img{
+    width: 100%;
+}
+
+.main{
+    width: 90%;
+    margin: auto;
+    
+    
+}
+
+section h2 {
     font-size: 24px;
 }
 
@@ -37,65 +109,6 @@ h2 {
 
 article p {
     font-size: 16px;
-}
-
-ul {
-    padding: 0;
-    list-style-type: none;
-    
-}
-
-img {
-    width: 100%;
-}
-
-input{
-    margin-left: 15px;
-    color: #666;
-}
-
-.navbar-menup{
-    display: none;
-}
-
-.burger-menu{
-    text-align: center;
-    /* margin-left: 45%;
-    margin-right: 45%;
-    margin-top: 10%;
-    margin-bottom: 10%; */
-    width: 10vw;
-    height: 5vh;
-    margin: auto;
-    padding: 5px;
-    margin-bottom: 5px;
-    border-radius: 5px;
-    background-color: #1259c3;
-    color: white;
-}
-
-.titulo-compra p{
-    text-align: center;
-    font-size: 16px;
-
-}
-
-.main-banner img{
-    width: 100%;
-}
-
-.navbar-menup{
-    margin-left: 15px;
-}
-
-.main{
-    background-color: rgb(202, 199, 199);
-}
-
-main{
-    width: 90%;
-    margin: auto;
-    
 }
 
 .circle-env{
@@ -117,12 +130,38 @@ article div{
     padding: 15px;
 }
 
-@media (min-width: 768px) {
-    .burger-menu{
-        display: none;
+@media (min-width:1200px) {
+    .logo{
+        width: 250px;
     }
 
-    .navbar-menup{
-        display: block;
+    .main-header-top-bar,
+    .main-nav-bar{
+        max-width: 1200px;
+        margin: auto;
+    }
+
+    .main-header-top-bar{
+        align-items: center;
+    }
+
+    .copy-header{
+        margin: 0;
+        max-width: none;
+        font-size: 25px;
+        font-weight: 400;
+    }
+
+    .main-nav-bar{
+        margin-top: 45px;
+    }
+
+    .main-nav-bar li{
+        margin: 0 10px;
+    }
+
+    .main-nav-bar a{
+        font-size: 19px;
     }
 }
+
