--- a/views/home.html
+++ b/views/home.html
@@ -5,52 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
+    <!-- fuentes de google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css "
-    rel="stylesheet" />
-    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/140d5acfa8.js" crossorigin="anonymous"></script>
+    <!-- Estilos Normalize y custom -->
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>        
-        <div>
-            <img src="images/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
+    <header class="main-header">        
+        <div class="main-header-top-bar">
+            <img class="logo" src="images/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
+            <h2 class="copy-header">
+                <i class="fas fa-hand-holding-usd"></i>
+                Comprá en cuotas y sin tarjeta de crédito
+            </h2>
         </div>
-        <div>
+        <!-- <div>
             <input type="search" value="Buscar productos, marcas" name="sBuscar" id="buscaProd">
         </div>
         <div class="btn-buscar">
             <button><i class="fas fa-search"></i></button>            
-        </div>
-        <div class="titulo-compra">
-            <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
-        </div>
-        <div class="navbar-menup">
-            <nav>
-                <ul>
+        </div> -->
+        <!-- <div class="navbar-menup"> -->
+            <a href="#" class="hamburger-button">
+                <i class="fas fa-bars"></i>
+            </a>
+            <nav class="main-nav-bar">
+                <ul class="left-navbar">
                     <li><a href="#">Ofertas</a></li>
                     <li><a href="#">Tiendas Oficiales</a></li>
                     <li><a href="#">Vender</a></li>
                     <li><a href="#">Ayuda</a></li>
-                    <li type="none"><br></li>
-                    <li><a href="#">Crea tu cuenta</a> <i class="far fa-id-card"></i></li>
+                </ul>
+                <ul class="right-navbar">    
+                    <li><a href="#">Crea tu cuenta</a> <i class="fas fa-credit-card"></i></li>
                     <li><a href="#">Ingresa</a> <i class="fas fa-sign-in-alt"></i></li>
                     <li><a href="#">Mis compras</a> <i class="fas fa-shopping-basket"></i></li>
                 </ul>
             </nav>
-        </div>
+        <!-- </div> -->
         
-        <div class="burger-menu">
-            <i class="fas fa-bars white"></i>
-        </div>
+        <!-- <div class="burger-menu">
+            <i class="fas fa-bars"></i>
+        </div> -->
         
     </header>
-    <div class="main-banner">
+     <div class="main-banner">
         <img src="/images/img-home-banner.jpg" alt="Imagenes Banner">
     </div>
-    <div class="main">
-        <main>            
+    <div class="main">                    
             <section>
                 <h2>Basado en tu última visita</h2>
                 <article>
@@ -144,11 +150,9 @@
                         <strong><p>SmartTv Samsung 43"</p></strong>
                     </div>                
                 </article>
-            </section>
-
-        </main>
+            </section>        
     </div>
-    <footer>
+    <!-- <footer>
         <section>
             <h4>Pagá con tarjeta o en efectivo</h4>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
@@ -167,6 +171,6 @@
         <section>
             <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
-    </footer>
+    </footer> -->
 </body>
 </html>
