--- a/views/home.html
+++ b/views/home.html
@@ -53,100 +53,158 @@
         </div> -->
         
     </header>
+    <!-- Formulario inicio -->
+        <form action="/crear-producto" method="post" class="create-form">
+            <div class="control-formulario">
+                <label for="nombre-prod">Nombre Producto</label>
+                <input type="text" name="nombre-prod" id="nombre-prod" class="control">
+            </div>
+            <div class="control-formulario">
+                <label for="precio-prod">Precio Producto</label>
+                <input type="number" name="precio-prod" id="precio-prod"
+                placeholder="123.35" class="control">
+            </div>
+            <div class="control-formulario">
+                <label for="categoria-prod">Categoria Producto</label>
+                <select name="categoria" id="categoria" class="control">
+                    <option value="hogar">Hogar</option>
+                    <option value="electro">Electro</option>
+                    <option value="indumentaria">Indumentaria</option>
+                </select>
+            </div>
+            <div class="control-formulario">
+                <label for="ciudad">Ciudad</label>
+                <select name="ciudad" id="ciudad" class="control">
+                    <option value="BA">Buenos Aires</option>
+                    <option value="ROS">Rosario</option>
+                    <option value="MZ">Mendoza</option>
+                </select>
+            </div>
+            <div class="control-formulario">
+                <label for="comentario">Comentarios</label>
+                <textarea name="comentario" id="comentario" cols="30" rows="10" class="control">
+                </textarea>
+            </div>
+            <div class="control-formulario">
+                <label for="oferta-prod">Oferta Producto</label>
+                <input type="radio" name="oferta-prod" id="oferta-prod">
+            </div>
+            <div class="control-formulario">
+                <button type="reset" class="button-form">Borrar</button>
+                <button type="submit" class="button-form">Guardar</button>
+            </div>
+        </form>
+    <!-- formulario fin -->
      <div class="main-banner">
         <img src="/images/img-home-banner.jpg" alt="Imagenes Banner">
     </div>
-    <div class="main">                    
-            <section>
-                <h2>Basado en tu última visita</h2>
+    <div class="main">
+        <h2>Basado en tu última visita</h2>                    
+            <section class="section-ultima-visita">                
                 <article>
                     <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
-                    <div>
+                    <div class="descripcion-articulo">
                         <div class="circle-env">
                             <i class="fas fa-truck"></i>
-                        </div>                        
-                        <p class="precios">$6.770</p>
-                        <p>40% OFF</p>
+                        </div>
+                        <div class="precio-oferta">                        
+                            <p class="precios">$6.770</p>
+                            <p class="ofertas">40% OFF</p>
+                        </div>
                         <strong><p>Cafetera Moulinex</p></strong>
                     </div>
                 </article>
                 <article>
                     <img src="/images/img-macbook-pro-2019.jpg" alt="Mac Pro">
-                    <div>
+                    <div class="descripcion-articulo">
                         <div class="circle-env">
                             <i class="fas fa-truck"></i>
                         </div>
-                        <p class="precios">$230.000</p>
-                        <p>20% OFF</p>
+                        <div class="precio-oferta">
+                            <p class="precios">$230.000</p>
+                            <p class="ofertas">20% OFF</p>
+                        </div>
                         <strong><p>MacBook Pro 2019</p></strong>
                     </div>                
                 </article>
                 <article>
                     <img src="/images/img-samsung-galaxy-s10.jpg" alt="Celular">
-                    <div>
+                    <div class="descripcion-articulo">
                         <div class="circle-env">
                             <i class="fas fa-truck"></i>
                         </div>
-                        <p class="precios">$70.500</p>
-                        <p>10% OFF</p>
+                        <div class="precio-oferta">
+                            <p class="precios">$70.500</p>
+                            <p class="ofertas">10% OFF</p>
+                        </div>
                         <strong><p>Samsung Galaxy S10</p></strong>
                     </div>
                 </article>
                 <article>
                     <img src="/images/img-tv-samsung-smart.jpg" alt="TV Samsung">
-                    <div>
+                    <div class="descripcion-articulo">
                         <div class="circle-env">
                             <i class="fas fa-truck"></i>
                         </div>
-                        <p class="precios">$23.200</p>
-                        <p>5% OFF</p>
+                        <div class="precio-oferta">
+                            <p class="precios">$23.200</p>
+                            <p class="ofertas">5% OFF</p>
+                        </div>
                         <strong><p>SmartTv Samsung 43"</p></strong>
                     </div>                
                 </article>
             </section>
-            <section>
-                <h2>Ofertas</h2>
+            <h2>Ofertas</h2>
+            <section class="section-ofertas">                
                 <article>
                     <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
-                    <div>
+                    <div class="descripcion-articulo">
                         <div class="circle-env">
                             <i class="fas fa-truck"></i>
                         </div>
-                        <p class="precios">$6.770</p>
-                        <p>40% OFF</p>
+                        <div class="precio-oferta">
+                            <p class="precios">$6.770</p>
+                            <p class="ofertas">40% OFF</p>
+                        </div>
                         <strong><p>Cafetera Moulinex</p></strong>
                     </div>
                 </article>
                 <article>
                     <img src="/images/img-macbook-pro-2019.jpg" alt="Mac Pro">
-                    <div>
+                    <div class="descripcion-articulo">
                         <div class="circle-env">
                             <i class="fas fa-truck"></i>
                         </div>
-                        <p class="precios">$230.000</p>
-                        <p>20% OFF</p>
+                        <div class="precio-oferta">
+                            <p class="precios">$230.000</p>
+                            <p class="ofertas">20% OFF</p>
+                        </div>
                         <strong><p>MacBook Pro 2019</p></strong>
                     </div>
                 </article>
                 <article>
                     <img src="/images/img-samsung-galaxy-s10.jpg" alt="Celular">
-                    <div>
+                    <div class="descripcion-articulo">
                         <div class="circle-env">
                             <i class="fas fa-truck"></i>
                         </div>
-                        <p class="precios">$70.500</p>
-                        <p>10% OFF</p>
+                        <div class="precio-oferta">
+                            <p class="precios">$70.500</p>
+                            <p class="ofertas">10% OFF</p>
+                        </div>
                         <strong><p>Samsung Galaxy S10</p></strong>
                     </div>
                 </article>
                 <article>
                     <img src="/images/img-tv-samsung-smart.jpg" alt="TV Samsung">
-                    <div>
+                    <div class="descripcion-articulo">
                         <div class="circle-env">
                             <i class="fas fa-truck"></i>
                         </div>
-                        <p class="precios">$23.200</p>
-                        <p>5% OFF</p>
+                        <div class="precio-oferta">
+                            <p class="precios">$23.200</p>
+                            <p class="ofertas">5% OFF</p>
+                        </div>
                         <strong><p>SmartTv Samsung 43"</p></strong>
                     </div>                
                 </article>
