--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,10 @@ body{
 .main-header{
     background-color: #EAC926;
     padding: 20px;
+    position: fixed;
+    top:0;
+    z-index: 1;
+    width: 100%;
 }
 
 .hamburger-button{
@@ -28,6 +32,17 @@ body{
 
 .logo{
     width: 200px;
+    animation: aumentar 1s linear infinite alternate;
+}
+
+@keyframes aumentar {
+    0%{
+        transform: scale(1);
+    }
+
+    100%{
+        transform: scale(1.5);
+    }
 }
 
 .copy-header{
@@ -75,6 +90,10 @@ body{
     width: 100%;
 }
 
+.main-banner{
+    margin-top: 240px;
+}
+
 .main{
     width: 90%;
     margin: auto;    
@@ -91,12 +110,13 @@ h2 {
 }
 
 .precios{
-    width: 30%;
+    /* width: 30%; */
     font-size: 18px;
 }
 
 .ofertas{
-    width: 70%;   
+    /* width: 70%;    */
+    margin-left: 15px;
     color: green;
 }
 
@@ -111,6 +131,7 @@ article img{
 .descripcion-articulo{
     margin-top: -3px;
     background-color: white;
+   
 
 }
 
@@ -126,43 +147,30 @@ article img{
 }
 
 article{
-    margin-bottom: 10px;    
+    margin-bottom: 10px;
+    position: relative;
 }
 
 article strong{
     display: none;
 }
 
+
+
 article div{
     border-top: 1px solid #ebebeb;
     padding: 15px;
 }
 
-@media (min-width:361px) {
-
-    .section-ultima-visita, .section-ofertas{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-
-    }
-
-    article strong{
-        display: block;        
-    }
-
-    article{
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
-        width: 40%;
-        
-    }
-
-
-     
+.form-regi, .form-login{
+    display: flex;
+    justify-content: center;
 }
-
 .create-form{
     padding: 20px 15px;
+    max-width: 850px;
+    width: 100%;
+    margin-top: 240px;
 }
 
 .control-formulario{
@@ -181,14 +189,94 @@ article div{
 }
 
 .button-form{
-    background-color: #39b54a;
+    /* background-color: #39b54a; */
+    background-color:#1259c3;
     border: none;
+    width: 100%;
     font-size: 20px;
     padding: 5px 10px;
     border-radius: 5px;
+    margin-top: 10px;
     color: white;
 }
 
+.control:focus{
+    border: 2px solid #1259c3;
+}
+
+.button-form:hover{
+   background-color: #0022AA;
+}
+
+
+
+.footer-section{    
+    margin-top: 15px;
+    text-align: center;
+    padding-top: 10px;
+}
+.footer-section div i{
+    color: rgb(2, 2, 131);
+    font-size: 30px;
+    margin: 20px 0px 10px 0px;
+    
+}
+
+.copy-right div{
+    margin: 20px 0px 0px 5px;
+    padding-top: 5px;
+    text-align: left;
+}
+
+@media (min-width:361px) {
+
+    .section-ultima-visita, .section-ofertas{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+
+    }
+
+    article strong:hover{
+        opacity: 1;
+    }
+
+    article strong{
+        display: block;
+        background-color: rgba(0,0,0,0.4);
+        color: white;
+        margin: 0;
+        padding: 15px; 
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        transition: opacity 450ms;
+    }  
+
+    article{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        width: 40%;
+        
+    }
+
+    .main-banner{
+        margin-top: 231px;
+    }
+
+    .footer-section{
+        padding: 0px 15px;
+        display: flex;
+        justify-content: space-around;
+        
+    }
+   
+}
 
 @media (min-width: 768px) {
     .main-header-top-bar{
@@ -207,7 +295,7 @@ article div{
 
     .main-nav-bar{
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
     }
 
     .main-nav-bar ul{
@@ -220,18 +308,27 @@ article div{
 
     article{
         width: 22%;
+        box-shadow: none;
     }
 
-   
+    article:hover{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
 
-@media (min-width:1200px) {
+    .main-banner{
+        margin-top: 155px;   
+    }
+
+}   
+
+@media (min-width:1000px) {
     .logo{
         width: 250px;
     }
 
     .main-header-top-bar,
     .main-nav-bar{
-        max-width: 1200px;
+        max-width: 950px;
         margin: auto;
     }
 
@@ -257,6 +354,16 @@ article div{
     .main-nav-bar a{
         font-size: 19px;
     }
+
+    .main-banner{
+        margin-top: 181px;
+        
+    }
+
+    .footer-section{
+        
+        max-width: 1200px;
+        margin: auto;
+    }
 }
 
-}
