colocando required a input de login y register

--- a/views/login.html
+++ b/views/login.html
@@ -59,12 +59,12 @@
             <div class="control-formulario">
                 <!-- <label for="nombre-user">Nombre usuario</label> -->
                 <input type="text" name="nombre-user" id="nombre-user" class="control" 
-                placeholder="Nombre de usuario">
+                placeholder="Nombre de usuario" required>
             </div>
             <div class="control-formulario">
                 <!-- <label for="pass-user">Contraseña</label> -->
                 <input type="password" name="pass-user" id="pass-user" class="control"
-                placeholder="Ingresá tu contraseña">
+                placeholder="Ingresá tu contraseña" required>
             </div>
             
             <div class="control-formulario">
