--- a/views/register.html
+++ b/views/register.html
@@ -58,11 +58,11 @@
         <form action="/home.html" method="POST" class="create-form">
             <div class="control-formulario">
                 <label for="nombre-ape-user">Nombre y Apellido</label>
-                <input type="text" name="nombre-ape-user" id="nombre-ape-user" class="control">
+                <input type="text" name="nombre-ape-user" id="nombre-ape-user" class="control" required>
             </div>
             <div class="control-formulario">
                 <label for="email-user">Email</label>
-                <input type="email" name="email-user" id="email-user" class="control">
+                <input type="email" name="email-user" id="email-user" class="control" required>
             </div>
             <div class="control-formulario">
                 <label for="fecha-nac-user">Fecha de Nacimiento</label>
@@ -95,11 +95,11 @@
             </div>
             <div class="control-formulario">
                 <label for="pass-user">Contraseña</label>
-                <input type="password" name="pass-user" id="pass-user" class="control">
+                <input type="password" name="pass-user" id="pass-user" class="control" required>
             </div>
             <div class="control-formulario">
                 <label for="confirm-pass-user">Confirmar contraseña</label>
-                <input type="password" name="confirm-pass-user" id="confirm-pass-user" class="control">
+                <input type="password" name="confirm-pass-user" id="confirm-pass-user" class="control" required>
             </div>
             <div class="control-formulario">                
                 <button type="submit" class="button-form">Enviar</button>
