--- a/views/login.html
+++ b/views/login.html
@@ -41,8 +41,8 @@
                     <li><a href="#">Ayuda</a></li>
                 </ul>
                 <ul class="right-navbar">    
-                    <li><a href="/register">Crea tu cuenta</a> <i class="fas fa-credit-card"></i></li>
-                    <li><a href="/login">Ingresa</a> <i class="fas fa-sign-in-alt"></i></li>
+                    <li><a href="register">Crea tu cuenta</a> <i class="fas fa-credit-card"></i></li>
+                    <li><a href="login">Ingresa</a> <i class="fas fa-sign-in-alt"></i></li>
                     <li><a href="#">Mis compras</a> <i class="fas fa-shopping-basket"></i></li>
                 </ul>
             </nav>
