--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="main-header">        
+    <header class="main-header">
+        <div class="form-search-bar">
+            <form action="" method="get">
+                <input type="search" value="Buscar productos, marcas" name="sBuscar" id="buscaProd" 
+            class="search-bar">
+            <button><i class="fas fa-search"></i></button>
+            </form>
+            
+        </div>        
         <div class="main-header-top-bar">
             <img class="logo" src="images/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
             <h2 class="copy-header">
@@ -23,10 +31,8 @@
                 Comprá en cuotas y sin tarjeta de crédito
             </h2>
         </div>
-        <!-- <div>
-            <input type="search" value="Buscar productos, marcas" name="sBuscar" id="buscaProd">
-        </div>
-        <div class="btn-buscar">
+        
+        <!-- <div class="btn-buscar">
             <button><i class="fas fa-search"></i></button>            
         </div> -->
         <!-- <div class="navbar-menup"> -->
